--- a/exo_decoupage_molengeek/exo_decoupage.html
+++ b/exo_decoupage_molengeek/exo_decoupage.html
@@ -105,7 +105,7 @@
         </a>
       </div>
     </section>
-    <img src="" alt="">
+    <img src="./public/images/logo.jpg" alt="">
     <p>salut le footer</p>
   </footer>
 </body>
